# ods-itmo-course

./: README.md  main.py  pyproject.toml
preprocessing/chat_preprocessing/: message.py
