[tool.poetry]
name = "ods-itmo-course"
version = "0.1.0"
description = ""
authors = ["konstantgr <konstantin.grotov@gmail.com>"]
readme = "README.md"
packages = [{include = "ods_itmo_course"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
